# earthnode-registration-plutus-smart-contract

./: .gitignore  cabal.project  flake.nix  start-node.sh
doc/: Specifications.md
en-registration/: en-registration.cabal
en-registration-plutus/: en-registration-plutus.cabal
en-registration-plutus/plutus/: OnChainRegistrationValidator.hs  RegistrationValidator.hs  Script.hs  Specifications.hs  Validator.hs
en-registration-plutus/plutus/Adapter/: Plutus.hs
en-registration-plutus/plutus/Adapter/Plutus/: OffChain.hs  OnChain.hs
en-registration-plutus/plutus/Aya/Registration/Core/ENOPNFT/MonetaryPolicy/: Builder.hs  OnChain.hs
en-registration-plutus/plutus/Aya/Registration/Core/Property/: Violation.hs
en-registration-plutus/plutus/Aya/Registration/Core/Property/Datum/: Register.hs
en-registration-plutus/plutus/Aya/Registration/Core/Property/NFT/Ownership/: Deregister.hs  Register.hs  UniqueSigner.hs
en-registration-plutus/plutus/Aya/Registration/Core/Property/NFT/Transitivity/: Deregister.hs  Register.hs  Update.hs
en-registration-plutus/plutus/Aya/Registration/Core/Validator/: Builder.hs  OnChain.hs
en-registration-plutus/plutus/ENOPNFT/: MonetaryPolicy.hs  OnChainMonetaryPolicy.hs  Validator.hs
en-registration-plutus/tests/unit/: Main.hs  Model.hs  Specifications.hs
en-registration-plutus/tests/unit/Adapter/: Cooked.hs
en-registration-plutus/tests/unit/Adapter/CardanoCryptoClass/: Crypto.hs
en-registration-plutus/tests/unit/Adapter/Plutus/: Gen.hs
en-registration-plutus/tests/unit/Fixture/: Register.hs
en-registration-plutus/tests/unit/OffChain/: Actions.hs  Register.hs
en-registration-plutus/tests/unit/Register/: Fixture.hs  Spec.hs  TxBuilding.hs
en-registration-plutus/tests/unit/Spec/: NominalCaseSpec.hs  RegisterSpec.hs
en-registration-plutus/tests/unit/Specs/Aya/Registration/Core/: Model.hs  Specifications.hs
en-registration-plutus/tests/unit/Specs/Aya/Registration/Core/Deregister/: NominalCase.hs  TxBuilding.hs
en-registration-plutus/tests/unit/Specs/Aya/Registration/Core/Property/Datum/: Violations.hs
en-registration-plutus/tests/unit/Specs/Aya/Registration/Core/Property/Datum/Register/: Violations.hs
en-registration-plutus/tests/unit/Specs/Aya/Registration/Core/Property/Datum/Update/: Violations.hs
en-registration-plutus/tests/unit/Specs/Aya/Registration/Core/Property/NFT/Ownership/: Violations.hs
en-registration-plutus/tests/unit/Specs/Aya/Registration/Core/Property/NFT/Ownership/Deregister/: Violations.hs
en-registration-plutus/tests/unit/Specs/Aya/Registration/Core/Property/NFT/Ownership/Register/: Violations.hs
en-registration-plutus/tests/unit/Specs/Aya/Registration/Core/Property/NFT/Ownership/Update/: Violations.hs
en-registration-plutus/tests/unit/Specs/Aya/Registration/Core/Property/NFT/Transitivity/Deregister/: Violations.hs
en-registration-plutus/tests/unit/Specs/Aya/Registration/Core/Property/NFT/Transitivity/Register/: Violations.hs
en-registration-plutus/tests/unit/Specs/Aya/Registration/Core/Property/NFT/Transitivity/Update/: Violations.hs
en-registration-plutus/tests/unit/Specs/Aya/Registration/Core/Register/: Fixture.hs  NominalCase.hs  TxBuilding.hs
en-registration-plutus/tests/unit/Specs/Aya/Registration/Core/Update/: NominalCase.hs  TxBuilding.hs
en-registration-plutus/tests/unit/Update/: TxBuilding.hs
en-registration-plutus/tests/unit/data/: generatedSubstrateEd25519Keys.json
en-registration/app/: Main.hs
en-registration/src/: OffChain.hs  OnChain.hs  Types.hs
en-registration/src/ENOP/: MintingPolicy.hs  MpOffChain.hs  Types.hs
en-registration/test/: OnChainSpec.hs
nix/: outputs.nix  project.nix  shell.nix
