cabal-version:      3.0
name:               wm-earthnode-registration
version:            2.0.0.0
author:             Torben Poguntke
maintainer:         torben.poguntke@worldmobile.io
copyright:          © 2023 World Mobile Group
build-type:         Simple
extra-source-files: CHANGELOG.md

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:
    -fforce-recomp -Wall -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Werror

  exposed-modules:
    ENOP.MintingPolicy
    ENOP.MpOffChain
    ENOP.Types
    OffChain
    OnChain
    Types

  build-depends:
    , aeson
    , base >=4.9 && <5
    , bytestring
    , plutus-ledger
    , plutus-ledger-api
    , plutus-script-utils
    , plutus-tx
    , plutus-tx-plugin
    , serialise

executable en-registration
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
    , aeson
    , base >=4.9 && <5
    , bytestring
    , containers
    , plutus-ledger-api
    , plutus-script-utils
    , plutus-tx
    , serialise
    , text
    , wm-earthnode-registration

test-suite en-registration-test
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      OnChainSpec
  build-depends:
    , base >=4.9 && <5
    , cooked-validators
    , hspec
    , plutus-script-utils
    , QuickCheck
    , wm-earthnode-registration

  build-tool-depends: hspec-discover:hspec-discover
  ghc-options:        -threaded
